--- a/src/components/oneSection/oneSectionStyle/OnseSectionPhotoAlbum.css
+++ b/src/components/oneSection/oneSectionStyle/OnseSectionPhotoAlbum.css
@@ -70,9 +70,9 @@
 .oneSection__viewImgContainer img {
     position: absolute;
     opacity: 0;
-    width: 100%;
-    height: auto;
-    object-fit: unset;
+    width: auto;
+    height: 100%;
+    object-fit: cover !important;
     transition: 0.5s ease;
 }
 
