--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,11 @@ body {
   background-color: #f8f8f8;
   letter-spacing: 0.3px;
   overflow: hidden;
+
+}
+
+video {
+  object-fit: cover !important;
 }
 
 h1,
