--- a/src/pages/pagesStyle/oneSection.css
+++ b/src/pages/pagesStyle/oneSection.css
@@ -1,6 +1,7 @@
 .oneSection__container {
     width: 100%;
     max-width: 2000px;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: start;
