--- a/src/pages/pagesStyle/section.css
+++ b/src/pages/pagesStyle/section.css
@@ -61,8 +61,10 @@
     justify-content: center;
     align-items: center;
     gap: 1em;
-    /* overflow: hidden; */
+    overflow: hidden;
     transition: 0.5s ease;
+    padding: 0;
+
 }
 
 
@@ -76,55 +78,12 @@
     object-fit: cover;
     opacity: 1;
     transition: 0.8s ease;
+    z-index: 3;
 }
 
-.cardSection__viewTitle img {
-    filter: brightness(0.9);
-    opacity: 1;
-    transition: 0.8s ease;
-}
-
-.cardSection__video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border: 0;
-    opacity: 1;
-    object-fit: cover;
-    filter: brightness(0.8);
-    z-index: 2;
-    transition: 0.5s ease;
-}
-
-.close__video {
-    opacity: 0;
-    transition: 0.5s ease;
-
-}
-
-.cardSection__blurVideo {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    opacity: 1;
-    object-fit: cover;
-    filter: blur(20px);
-    z-index: 1;
-    transition: 0.5s ease;
-
-}
-
-.close__blurVideo {
-    opacity: 0;
-    transition: 0.5s ease;
-
-}
 
 .cardSection__link {
+    position: absolute;
     color: var(--text-color-white);
     z-index: 5;
     font-size: 1.5em;
